Bug 566979 - No Syntax error seen: when "sealed" token used in method signature
Change-Id: I5bfb48ab285697caaa69bc826d65cddcfea442d6